--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-
-    <style name="QRAlarmTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:statusBarColor">#FF38285C</item>
-        <!-- Fix for https://issuetracker.google.com/issues/233251826 -->
-        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>
-    </style>
-
-    <style name="TimePickerStyle">
-        <!-- Using dp instead of sp for the TimePicker due to this bug:
-        https://github.com/sweakpl/qralarm-android/issues/28 -->
-        <item name="android:textSize" tools:ignore="SpUsage">52dp</item>
-        <item name="android:fontFamily">@font/amiko_regular</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:colorControlNormal">@android:color/transparent</item>
-    </style>
-
+<resources>
+    <style name="Theme.QRAlarm" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
