--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.QRAlarm" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="TimePickerStyle">
+        <!-- Using dp instead of sp for the TimePicker due to this bug:
+        https://github.com/sweakpl/qralarm-android/issues/28 -->
+        <item name="android:textSize" tools:ignore="SpUsage">52dp</item>
+        <item name="android:fontFamily">@font/amiko_regular</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:colorControlNormal">@android:color/transparent</item>
+    </style>
+
 </resources>
