--- a/app/src/main/res/values/content_descriptions.xml
+++ b/app/src/main/res/values/content_descriptions.xml
@@ -10,6 +10,9 @@
     <string name="content_description_play_icon">Play icon</string>
     <string name="content_description_stop_icon">Stop icon</string>
     <string name="content_description_edit_icon">Edit icon</string>
+    <string name="content_description_more_icon">More options icon</string>
+    <string name="content_description_qr_code_scanner_icon">QR code scanner icon</string>
+    <string name="content_description_delete_icon">Delete icon</string>
 
     <string name="content_description_wake_up_catchphrase_image">Image showing a friendly stick man lying in bed woken up.</string>
     <string name="content_description_get_up_catchphrase_image">Image showing a smiling stick man walking with their phone ringing.</string>
