--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.QRAlarm" parent="android:Theme.Material.Light.NoActionBar" />
 
+    <style name="Theme.QRAlarm.Splash" parent="Theme.SplashScreen">
+        <item name="postSplashScreenTheme">@style/Theme.QRAlarm</item>
+    </style>
+
     <style name="TimePickerStyle">
         <!-- Using dp instead of sp for the TimePicker due to this bug:
         https://github.com/sweakpl/qralarm-android/issues/28 -->
