--- a/app/src/main/res/values/content_descriptions.xml
+++ b/app/src/main/res/values/content_descriptions.xml
@@ -22,8 +22,13 @@
     <string name="content_description_automatic_settings_icon">Automatic settings icon</string>
     <string name="content_description_app_settings_icon">Application settings icon</string>
     <string name="content_description_special_app_settings_icon">Special app settings icon</string>
+    <string name="content_description_special_alarm_settings_icon">Special alarm settings icon</string>
+    <string name="content_description_early_access_icon">Early access icon</string>
+    <string name="content_description_no_ads_icon">No ads icon</string>
+    <string name="content_description_access_forever_icon">Access forever icon</string>
 
     <string name="content_description_wake_up_catchphrase_image">Image showing a friendly stick man lying in bed woken up.</string>
     <string name="content_description_get_up_catchphrase_image">Image showing a smiling stick man walking with their phone ringing.</string>
     <string name="content_description_rise_up_catchphrase_image">Image showing a happy stick man after they scanned the QR Code with their phone.</string>
+    <string name="content_description_qralarm_pro_image">QRAlarm PRO app icon image</string>
 </resources>
