--- a/app/src/main/res/values/content_descriptions.xml
+++ b/app/src/main/res/values/content_descriptions.xml
@@ -27,6 +27,8 @@
     <string name="content_description_early_access_icon">Early access icon</string>
     <string name="content_description_access_forever_icon">Access forever icon</string>
     <string name="content_description_flash_icon">Flash icon</string>
+    <string name="content_description_undo_icon">Undo changes icon</string>
+    <string name="content_description_skip_next_alarm_icon">Skip next alarm icon</string>
 
     <string name="content_description_wake_up_catchphrase_image">Image showing a friendly stick man lying in bed woken up.</string>
     <string name="content_description_get_up_catchphrase_image">Image showing a smiling stick man walking with their phone ringing.</string>
