--- a/app/src/main/res/values-pl/content_descriptions.xml
+++ b/app/src/main/res/values-pl/content_descriptions.xml
@@ -29,6 +29,7 @@
     <string name="content_description_flash_icon">Ikona latarki</string>
     <string name="content_description_undo_icon">Ikona cofania zmian</string>
     <string name="content_description_skip_next_alarm_icon">Ikona pomijania kolejnego alarmu</string>
+    <string name="content_description_label_icon">Ikona etykiety</string>
 
     <string name="content_description_wake_up_catchphrase_image">Obraz przedstawiający przyjaznego patyczaka leżącego w łóżku po przebudzeniu.</string>
     <string name="content_description_get_up_catchphrase_image">Obraz przedstawiający uśmiechniętego patyczaka idącego z dzwoniącym telefonem.</string>
