--- a/app/src/main/res/values-de/content_descriptions.xml
+++ b/app/src/main/res/values-de/content_descriptions.xml
@@ -22,8 +22,8 @@
     <string name="content_description_app_settings_icon">Symbol „Anwendungseinstellungen“</string>
     <string name="content_description_special_app_settings_icon">Symbol für spezielle App-Einstellungen</string>
     <string name="content_description_star_icon">Sternsymbol</string>
-    <string name="content_description_special_alarm_settings_icon">Symbol für spezielle Alarmeinstellungen</string>
-    <string name="content_description_early_access_icon">Symbol für frühen Zugriff</string>
+    <string name="content_description_do_not_leave_alarm_icon">Symbol für Alarmfunktion nicht verlassen</string>
+    <string name="content_description_power_off_guard_icon">Symbol für die Funktion des Ausschaltschutzes</string>
     <string name="content_description_access_forever_icon">Symbol „Für immer zugreifen“</string>
     <string name="content_description_flash_icon">Blitzsymbol</string>
     <string name="content_description_undo_icon">Symbol „Änderungen rückgängig machen“</string>
