--- a/app/src/main/res/values-it/content_descriptions.xml
+++ b/app/src/main/res/values-it/content_descriptions.xml
@@ -22,8 +22,8 @@
     <string name="content_description_app_settings_icon">Icona delle impostazioni dell\'applicazione</string>
     <string name="content_description_special_app_settings_icon">Icona delle impostazioni speciali dell\'app</string>
     <string name="content_description_star_icon">Icona stella</string>
-    <string name="content_description_special_alarm_settings_icon">Icona delle impostazioni di allarme speciale</string>
-    <string name="content_description_early_access_icon">Icona di accesso anticipato</string>
+    <string name="content_description_do_not_leave_alarm_icon">Non lasciare l\'icona della funzionalità di allarme</string>
+    <string name="content_description_power_off_guard_icon">Icona della funzionalità di protezione dallo spegnimento</string>
     <string name="content_description_access_forever_icon">Icona di accesso per sempre</string>
     <string name="content_description_flash_icon">Icona del flash</string>
     <string name="content_description_undo_icon">Icona Annulla modifiche</string>
