--- a/app/src/main/res/values-pl/content_descriptions.xml
+++ b/app/src/main/res/values-pl/content_descriptions.xml
@@ -23,8 +23,8 @@
     <string name="content_description_app_settings_icon">Ikona ustawień aplikacji</string>
     <string name="content_description_special_app_settings_icon">Ikona specjalnych ustawień aplikacji</string>
     <string name="content_description_star_icon">Ikona gwiazdy</string>
-    <string name="content_description_special_alarm_settings_icon">Ikona specjalnych ustawień alarmu</string>
-    <string name="content_description_early_access_icon">Ikona wczesnego dostępu</string>
+    <string name="content_description_do_not_leave_alarm_icon">Ikona funkcja nie opuszczaj alarmu</string>
+    <string name="content_description_power_off_guard_icon">Ikona funkcji zabezpieczenia przed wyłączeniem zasilania</string>
     <string name="content_description_access_forever_icon">Ikona dostępu na zawsze</string>
     <string name="content_description_flash_icon">Ikona latarki</string>
     <string name="content_description_undo_icon">Ikona cofania zmian</string>
