--- a/app/src/main/res/values-tr/content_descriptions.xml
+++ b/app/src/main/res/values-tr/content_descriptions.xml
@@ -22,8 +22,8 @@
     <string name="content_description_app_settings_icon">Uygulama ayarları simgesi</string>
     <string name="content_description_special_app_settings_icon">Özel uygulama ayarları simgesi</string>
     <string name="content_description_star_icon">Yıldız simgesi</string>
-    <string name="content_description_special_alarm_settings_icon">Özel alarm ayarları simgesi</string>
-    <string name="content_description_early_access_icon">Erken erişim simgesi</string>
+    <string name="content_description_do_not_leave_alarm_icon">Alarm işlevi simgesinden ayrılmayın</string>
+    <string name="content_description_power_off_guard_icon">Güç kapatma koruması işlevsellik simgesi</string>
     <string name="content_description_access_forever_icon">Kalıcı erişim simgesi</string>
     <string name="content_description_flash_icon">Flaş simgesi</string>
     <string name="content_description_undo_icon">Değişiklikleri geri al simgesi</string>
