--- a/app/src/main/res/values-uk/content_descriptions.xml
+++ b/app/src/main/res/values-uk/content_descriptions.xml
@@ -23,8 +23,8 @@
     <string name="content_description_app_settings_icon">Піктограма налаштувань програми</string>
     <string name="content_description_special_app_settings_icon">Піктограма спеціальних налаштувань програми</string>
     <string name="content_description_star_icon">Піктограма зірки</string>
-    <string name="content_description_special_alarm_settings_icon">Піктограма спеціальних налаштувань будильника</string>
-    <string name="content_description_early_access_icon">Піктограма раннього доступу</string>
+    <string name="content_description_do_not_leave_alarm_icon">Піктограма Не покидати будильник</string>
+    <string name="content_description_power_off_guard_icon">Піктограма Захист від вимкнення</string>
     <string name="content_description_access_forever_icon">Піктограма доступу назавжди</string>
     <string name="content_description_flash_icon">Піктограма ліхтаря</string>
     <string name="content_description_undo_icon">Піктограма відміни</string>
@@ -37,5 +37,5 @@
     <string name="content_description_get_up_catchphrase_image">Картина із зображенням усміхненого стікмена, яка йде з телефоном, що дзвонить.</string>
     <string name="content_description_rise_up_catchphrase_image">Зображення, на якому зображений щасливий стікмена після того, як він відсканував QR-код своїм телефоном.</string>
     <string name="content_description_qralarm_pro_image">Зображення іконки програми QRAlarm PRO</string>
-    <string name="content_description_five_stars_image">Зображення п'яти золотих зірок</string>
+    <string name="content_description_five_stars_image">Зображення п\'яти золотих зірок</string>
 </resources>
