Added the option of choosing alarm time with the dialer time picker

--- a/app/src/main/res/values-es/content_descriptions.xml
+++ b/app/src/main/res/values-es/content_descriptions.xml
@@ -31,6 +31,7 @@
     <string name="content_description_sound_icon">Icono de sonido</string>
     <string name="content_description_active_system_setting">Icono de configuración activa del sistema</string>
     <string name="content_description_copy_icon">Icono de copia</string>
+    <string name="content_description_clock_icon">Icono del reloj</string>
 
     <string name="content_description_wake_up_catchphrase_image">Imagen que muestra a un simpático hombre de palo acostado en la cama, despertado.</string>
     <string name="content_description_get_up_catchphrase_image">Imagen que muestra a un hombre de palo sonriente caminando con su teléfono sonando.</string>
