--- a/app/src/main/res/values-de/content_descriptions.xml
+++ b/app/src/main/res/values-de/content_descriptions.xml
@@ -32,6 +32,7 @@
     <string name="content_description_active_system_setting">Symbol für die aktive Systemeinstellung</string>
     <string name="content_description_copy_icon">Symbol kopieren</string>
     <string name="content_description_clock_icon">Uhr-Symbol</string>
+    <string name="content_description_emergency_icon">Notfall-Dreieckssymbol</string>
 
     <string name="content_description_wake_up_catchphrase_image">Bild, das ein freundliches Strichmännchen zeigt, der aufgewacht im Bett liegt.</string>
     <string name="content_description_get_up_catchphrase_image">Bild, das ein lächelndes Strichmännchen zeigt, während sein Telefon klingelt.</string>
