--- a/app/src/main/res/values-fr/content_descriptions.xml
+++ b/app/src/main/res/values-fr/content_descriptions.xml
@@ -32,6 +32,7 @@
     <string name="content_description_active_system_setting">Icône de réglage du système actif</string>
     <string name="content_description_copy_icon">Icône de copie</string>
     <string name="content_description_clock_icon">Icône d\'horloge</string>
+    <string name="content_description_emergency_icon">Icône du triangle d\'urgence</string>
 
     <string name="content_description_wake_up_catchphrase_image">Image montrant un bonhomme allumette sympathique allongé dans son lit et réveillé.</string>
     <string name="content_description_get_up_catchphrase_image">Image montrant un bonhomme allumette souriant marchant avec son téléphone qui sonne.</string>
