--- a/app/src/main/res/drawable/ic_qralarm.xml
+++ b/app/src/main/res/drawable/ic_qralarm.xml
@@ -4,75 +4,57 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M21.755,12.109C21.755,17.478 17.403,21.83 12.035,21.83C6.666,21.83 2.314,17.478 2.314,12.109C2.314,6.741 6.666,2.389 12.035,2.389C17.403,2.389 21.755,6.741 21.755,12.109ZM4.258,12.109C4.258,16.404 7.74,19.885 12.035,19.885C16.33,19.885 19.811,16.404 19.811,12.109C19.811,7.814 16.33,4.333 12.035,4.333C7.74,4.333 4.258,7.814 4.258,12.109Z"
+      android:pathData="M18.77,20.989L20.159,22.378"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M3.613,22.256L5.002,20.867"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M22.444,12.94C22.444,18.687 17.785,23.346 12.038,23.346C6.29,23.346 1.631,18.687 1.631,12.94C1.631,7.192 6.29,2.533 12.038,2.533C17.785,2.533 22.444,7.192 22.444,12.94ZM3.192,12.94C3.192,17.825 7.152,21.785 12.038,21.785C16.923,21.785 20.883,17.825 20.883,12.94C20.883,8.054 16.923,4.094 12.038,4.094C7.152,4.094 3.192,8.054 3.192,12.94Z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M19.581,1.818L23.182,5.419A1.157,1.157 0,0 1,23.182 7.055L23.182,7.055A1.157,1.157 0,0 1,21.545 7.055L17.945,3.455A1.157,1.157 90,0 1,17.945 1.818L17.945,1.818A1.157,1.157 90,0 1,19.581 1.818z"
+      android:pathData="M18.387,0.909C18.778,0.518 19.411,0.518 19.801,0.909L23.293,4.4C23.683,4.791 23.683,5.424 23.293,5.814L22.252,6.855C22.057,7.05 21.74,7.05 21.545,6.855L17.347,2.657C17.151,2.461 17.151,2.145 17.347,1.949L18.387,0.909Z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M0.818,5.419L4.419,1.818A1.157,1.157 90,0 1,6.055 1.818L6.055,1.818A1.157,1.157 90,0 1,6.055 3.455L2.455,7.055A1.157,1.157 0,0 1,0.818 7.055L0.818,7.055A1.157,1.157 90,0 1,0.818 5.419z"
+      android:pathData="M0.707,5.812C0.317,5.422 0.317,4.789 0.707,4.398L4.198,0.907C4.589,0.517 5.222,0.517 5.612,0.907L6.654,1.949C6.849,2.144 6.849,2.46 6.654,2.656L2.456,6.854C2.26,7.049 1.944,7.049 1.749,6.854L0.707,5.812Z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M6.943,7.48h0.926v4.629h-0.926z"
+      android:pathData="M15.011,11.204l-0,3.469l-1.239,0l-0,-3.469z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M7.869,7.48h4.629v0.926h-4.629z"
+      android:pathData="M13.772,13.434l-0,1.239l-1.239,0l-0,-1.239z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M13.424,7.48h3.703v0.926h-3.703z"
+      android:pathData="M17.489,12.195l-0,1.239l-2.478,0l-0,-1.239z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M13.424,11.183l0,-2.777l0.926,-0l0,2.777z"
+      android:pathData="M16.25,14.425h1.239v3.964h-1.239z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M14.349,10.258l0,-0.926l0.926,-0l0,0.926z"
+      android:pathData="M12.533,15.912h1.239v2.478h-1.239z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M16.201,15.812l0,-0.926l0.926,-0l0,0.926z"
+      android:pathData="M13.772,15.912h1.239v1.239h-1.239z"
       android:fillColor="#ffffff"/>
   <path
-      android:pathData="M13.424,15.812l0,-0.926l0.926,-0l0,0.926z"
-      android:fillColor="#ffffff"/>
+      android:pathData="M7.206,8.108h3.715v3.715h-3.715z"
+      android:strokeWidth="1.24"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"/>
   <path
-      android:pathData="M10.646,15.812l0,-0.926l0.926,-0l0,0.926z"
-      android:fillColor="#ffffff"/>
+      android:pathData="M13.153,8.108h3.715v2.477h-3.715z"
+      android:strokeWidth="1.24"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"/>
   <path
-      android:pathData="M7.869,16.738l0,-0.926l0.926,-0l0,0.926z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M15.275,14.886l0,-0.926l1.852,-0l0,0.926z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M11.572,16.738l0,-0.926l4.629,-0l0,0.926z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M8.795,14.886l0,-0.926l3.703,-0l0,0.926z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M16.201,9.332l0,-0.926l0.926,-0l0,0.926z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M15.275,13.035l0,-2.777l0.926,-0l0,2.777z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M14.349,14.886l0,-2.777l0.926,-0l0,2.777z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M6.943,16.738l0,-2.777l0.926,-0l0,2.777z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M16.201,13.035l0,-1.852l0.926,-0l0,1.852z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M8.795,16.738l0,-1.852l0.926,-0l0,1.852z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M11.572,8.406h0.926v3.703h-0.926z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M6.943,12.109h5.555v0.926h-5.555z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M8.795,9.332h1.852v1.852h-1.852z"
-      android:fillColor="#ffffff"/>
+      android:pathData="M7.206,14.054h3.715v3.715h-3.715z"
+      android:strokeWidth="1.24"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"/>
 </vector>
