--- a/app/src/main/res/values-es/content_descriptions.xml
+++ b/app/src/main/res/values-es/content_descriptions.xml
@@ -34,6 +34,7 @@
     <string name="content_description_clock_icon">Icono del reloj</string>
     <string name="content_description_emergency_icon">Icono del triángulo de emergencia</string>
     <string name="content_description_muted_sound_icon">Icono de sonido silenciado</string>
+    <string name="content_description_chain_icon">Icono de cadena</string>
 
     <string name="content_description_wake_up_catchphrase_image">Imagen que muestra a un simpático hombre de palo acostado en la cama, despertado.</string>
     <string name="content_description_get_up_catchphrase_image">Imagen que muestra a un hombre de palo sonriente caminando con su teléfono sonando.</string>
