--- a/app/src/main/res/values-it/content_descriptions.xml
+++ b/app/src/main/res/values-it/content_descriptions.xml
@@ -34,6 +34,7 @@
     <string name="content_description_clock_icon">Icona dell\'orologio</string>
     <string name="content_description_emergency_icon">Icona del triangolo di emergenza</string>
     <string name="content_description_muted_sound_icon">Icona audio disattivato</string>
+    <string name="content_description_chain_icon">Icona catena</string>
 
     <string name="content_description_wake_up_catchphrase_image">Immagine che mostra un amichevole omino stilizzato sdraiato sul letto, svegliato.</string>
     <string name="content_description_get_up_catchphrase_image">Immagine che mostra un omino stilizzato sorridente che cammina mentre il suo telefono squilla.</string>
